mdapipkg/unpackaged/objects/Directory__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Line__c</fullName>
        <label>Description Line</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Code_1__c</fullName>
        <label>Directory Code 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Code_2__c</fullName>
        <label>Directory Code 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Code_3__c</fullName>
        <label>Directory Code 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Listing_Code__c</fullName>
        <label>Directory Listing Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Mailing_Address__c</fullName>
        <label>Directory Mailing Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sequence_Number__c</fullName>
        <label>Last Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Library_id__c</fullName>
        <label>Library id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_number__c</fullName>
        <label>Line number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>List_With_Phone_Number__c</fullName>
        <label>List With Phone Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Sequence__c</fullName>
        <label>Listing Sequence</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Directory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Directory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>